Bug 79236 - CRASH: Undoing font style crashes LibO
Summary: CRASH: Undoing font style crashes LibO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta1
Hardware: Other All
: highest critical
Assignee: Michael Stahl
URL:
Whiteboard: target:4.3.0 target:5.4.0
Keywords: bibisected, regression
Depends on:
Blocks: Undo-Redo Writer-Styles mab4.3
  Show dependency treegraph
 
Reported: 2014-05-26 02:24 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-09-30 20:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-05-26 02:24:59 UTC
1. open a blank writer document
2. Type some words
3. Select the words and right-click 'edit paragraph style'
4. change spacing below paragraph in the 'indents & spacing' tab and press OK
5. right-click again on the selected text and click 'paragraph...'
6. change spacing below paragraph to zero and press OK
7. press undo twice
8. LibO crahses

Tested on Linux Mint with LibO 4.3 beta 1. Doesnt happen in 4.2.5.
Comment 1 Joel Madero 2014-05-26 04:09:23 UTC
ubuntu 14.04 x64
LibreOffice 4.3 beta1

Confirmed

New
Critical - crasher/loss of data
Highest - regression + not horribly complicated to reproduce - afraid that there might be other ways to trigger the same crash

 52472371d4cd1e7d386e3780b9e986fcb4ea1da2 is the first bad commit
commit 52472371d4cd1e7d386e3780b9e986fcb4ea1da2
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Tue May 20 10:16:41 2014 +0000

    source-hash-944c78ecb91608f4c3e9bab32fdbc90c67326525
    
    commit 944c78ecb91608f4c3e9bab32fdbc90c67326525
    Author:     Andrzej Hunt <andrzej.hunt@collabora.com>
    AuthorDate: Fri Apr 25 20:25:48 2014 +0100
    Commit:     Andrzej Hunt <andrzej.hunt@collabora.com>
    CommitDate: Sat Apr 26 08:24:36 2014 +0100
    
        fdo#75489 Pass toolbar context menu commands to toolbar for handling.
    
        The toolbar context menu is handled by the toolbar manager, however
        the items are provided and managed by the toolbar itself -- previously
        any events on the list of toolbar items in the context menu were silently
        discarded, whereas now we pass them on to the owning toolbar.
    
        Change-Id: Ia17718c3ff8acfba1b6d655022dd9469932f3493

:100644 100644 df7df9357f7ca1ecb4a9fb78f23774ae0075025c fa6afcb40a1990b220e346ee12647f81728f2f2b M	ccache.log
:100644 100644 8186336dc64fc91cff8a087490f54ca1584e4892 a03c81a56c3e0e34002c292723e3ab9cf4abf916 M	commitmsg
:100644 100644 9b48d132f39b397fc8d692d7daf7bf14e7c4b687 8673fadbb0d3fd57e58689b702c3b99a993cca9e M	make.log
:040000 040000 ae652e2ca7716809f637e49a6f79ce5f9cb529d1 ec6f85e2f9ba743959b62b182d705f755095f837 M	opt


# bad: [a92705c1fabafddd43d175a0714855cd22551232] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [6ab7f53af36f13bbefdd4e4fcbd3d1ea432a77d9] source-hash-22029c7e17b4cb48acb058d47ec9c3b6b8b6b294
git bisect start 'latest' 'oldest'
# good: [bebf9d31c8fe9de96798484288a0fffc4d54917d] source-hash-09e5de8278dd8f13adcf614db35c8a8a04ba8e47
git bisect good bebf9d31c8fe9de96798484288a0fffc4d54917d
# good: [fac643700ecfabc737836bbed068776f34037d53] source-hash-40a61d93ade494fa98c23a9fd8776c8dadf8f30f
git bisect good fac643700ecfabc737836bbed068776f34037d53
# bad: [44e392733ca46fb0fde9664f8b33ff4da5295caa] source-hash-062e69f40b749aa8a6058c3e6ca328af86aeb45b
git bisect bad 44e392733ca46fb0fde9664f8b33ff4da5295caa
# good: [3e370810edadd040e63cef076594a2058603b344] source-hash-ddd4b159531e835539e86f76c56d1013de46a2bd
git bisect good 3e370810edadd040e63cef076594a2058603b344
# skip: [c05d75aa2ab2065c8953a1649866074f2e0a75f1] source-hash-28fc951233a58fb4d8515ed4380140aaee0afd32
git bisect skip c05d75aa2ab2065c8953a1649866074f2e0a75f1
# good: [304c44989cd8e7d5074eeb53ca14c54b3b6e2e16] source-hash-f05861de995f8d4edb1a97c616d050f55ec04c32
git bisect good 304c44989cd8e7d5074eeb53ca14c54b3b6e2e16
# good: [1fd4b5c55c33b4df5d8b74e00fa49d45cf5927a5] source-hash-9f06e4bc3a56806061f759770f758ad3c7ddf09c
git bisect good 1fd4b5c55c33b4df5d8b74e00fa49d45cf5927a5
# skip: [495dc74dce0a63505cc339db9d2ee708f31d1e84] source-hash-4158d8843d50d50e9830c8dc24af8722de77f4af
git bisect skip 495dc74dce0a63505cc339db9d2ee708f31d1e84
# good: [ecbd42c0caaeb7db276bb0004a9f6a7133086bb1] source-hash-da1425650b0c3e0921d2c9d51d461aca99038650
git bisect good ecbd42c0caaeb7db276bb0004a9f6a7133086bb1
# good: [6efa4f17265c3af9378f78bb28570f75c3d88723] source-hash-2e41702ed4f224f195d33054e2e714f546b4442c
git bisect good 6efa4f17265c3af9378f78bb28570f75c3d88723
# bad: [52472371d4cd1e7d386e3780b9e986fcb4ea1da2] source-hash-944c78ecb91608f4c3e9bab32fdbc90c67326525
git bisect bad 52472371d4cd1e7d386e3780b9e986fcb4ea1da2
# first bad commit: [52472371d4cd1e7d386e3780b9e986fcb4ea1da2] source-hash-944c78ecb91608f4c3e9bab32fdbc90c67326525
Comment 2 Michael Stahl 2014-05-27 09:18:39 UTC
fixed on master
Comment 3 Commit Notification 2014-05-27 09:19:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=732eee2de4d0579eda69fe0ebfa361180fa35456

fdo#79236: sw: Undo of changing style crashes on invalid item (-1)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-05-27 09:58:32 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9428ec8dc7f44d465a5b9744b9ed95ce02adf104&h=libreoffice-4-3

fdo#79236: sw: Undo of changing style crashes on invalid item (-1)


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Yousuf Philips (jay) (retired) 2014-05-28 03:23:09 UTC
Michael if you can check bug 78854 as it seems to be a similar crash due to undo.
Comment 6 Robinson Tryon (qubit) 2015-12-17 08:14:24 UTC Comment hidden (obsolete)
Comment 7 Commit Notification 2017-02-07 16:41:38 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f9d0f55b2eefc1107d238774a00f7062a1e0d5c8

tdf#79236: Add uitest

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.